# croo-arc-agent

croo-arc-agent/croo-arc-agent/: DORAHACKS_WRITEUP.md  LICENSE  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml  requirements.txt
croo-arc-agent/croo-arc-agent/croo_arc_agent/: __init__.py  config.py  provider.py  requester_demo.py  solve_offline.py  solver.py
croo-arc-agent/croo-arc-agent/examples/: sample_task.json
croo-arc-agent/croo-arc-agent/tests/: test_solver.py
